--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,8 @@
 Gamma Finances
-       Данная программа  имеет ряд очень полезных функций:
-1) Организацию счетов по доходам и расходам всех членов семьи
-2) Неограниченное количество счетов и валют
-3) Мгновенный ввод тех операций, которые вы осуществляете каждый день
-4) Расписание выполняемости операций
-5) Интуитивно простой и понятный интерфейс программы
+       
+       В ходе выполнения проекта создали модели, контроллеры, вьюхи и тесты для всего этого. Мы имеев возможность залогиниться на сайте, создать свои счета и создать операции по счетам.
+
+
        Ссылка на heroku: https://gammafinances.herokuapp.com/
        Ссылка на файл со схемой БД: https://drive.google.com/open?id=0B-ZfBDN3Lo1MTE9fLWwwR2d5Vkk&authuser=0
        
